--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,93 +1,93 @@
 steps:
-  - command:
-      - chmod 755 auto/run_tests.sh
-      - auto/run_tests.sh
-    label: ':package: & :rocket: Run Tests on Dev: VERSION -> ${BUILDKITE_BUILD_NUMBER}'
-    # depends_on:
-    #   - "build"
-    # soft_fail:
-    #   - exit_status: "*"
-    key: 'dev_run_tests'
-    branches: woa-* pswoa-*
-    agents:
-      queue: 'wo:dev'
-    notify:
-      - github_commit_status:
-          context: 'Dev: Unit Tests?'
-      # - if: build.branch =~ /^woa-/
-      #   github_commit_status:
-      #     context: 'Dev: Unit Tests for woa-*?'
-      # - if: build.branch =~ /^pswoa-/
-      #   github_commit_status:
-      #     context: 'Dev: Unit Tests for pswoa-*?'
-    # artifact_paths:
-    #   - "cypress/results/**/*"
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 1
-    env:
-      BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
-      ENV: 'dev-IntegrationTests'
-      REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
+  # - command:
+  #     - chmod 755 auto/run_tests.sh
+  #     - auto/run_tests.sh
+  #   label: ':package: & :rocket: Run Tests on Dev: VERSION -> ${BUILDKITE_BUILD_NUMBER}'
+  #   # depends_on:
+  #   #   - "build"
+  #   # soft_fail:
+  #   #   - exit_status: "*"
+  #   key: 'dev_run_tests'
+  #   branches: woa-* pswoa-*
+  #   agents:
+  #     queue: 'wo:dev'
+  #   notify:
+  #     - github_commit_status:
+  #         context: 'Dev: Unit Tests?'
+  #     # - if: build.branch =~ /^woa-/
+  #     #   github_commit_status:
+  #     #     context: 'Dev: Unit Tests for woa-*?'
+  #     # - if: build.branch =~ /^pswoa-/
+  #     #   github_commit_status:
+  #     #     context: 'Dev: Unit Tests for pswoa-*?'
+  #   # artifact_paths:
+  #   #   - "cypress/results/**/*"
+  #   retry:
+  #     automatic:
+  #       - exit_status: -1
+  #         limit: 1
+  #   env:
+  #     BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
+  #     ENV: 'dev-IntegrationTests'
+  #     REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
 
-  - command:
-      - chmod 755 auto/build.sh
-      - auto/build.sh
-      - chmod 755 auto/deploy_dev.sh
-      - auto/deploy_dev.sh
-    label: ':package: & :rocket: Build & Deploy Dev: VERSION -> ${BUILDKITE_BUILD_NUMBER}'
-    branches: dev
-    agents:
-      queue: 'wo:dev'
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 1
-    env:
-      BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
-      ENV: 'dev'
-      REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
+  # - command:
+  #     - chmod 755 auto/build.sh
+  #     - auto/build.sh
+  #     - chmod 755 auto/deploy_dev.sh
+  #     - auto/deploy_dev.sh
+  #   label: ':package: & :rocket: Build & Deploy Dev: VERSION -> ${BUILDKITE_BUILD_NUMBER}'
+  #   branches: dev
+  #   agents:
+  #     queue: 'wo:dev'
+  #   retry:
+  #     automatic:
+  #       - exit_status: -1
+  #         limit: 1
+  #   env:
+  #     BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
+  #     ENV: 'dev'
+  #     REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
 
-  - command:
-      - chmod 755 auto/build.sh
-      - auto/build.sh
-      - chmod 755 auto/deploy_qa.sh
-      - auto/deploy_qa.sh
-    label: ':package: & :rocket: Build & Deploy QA: VERSION -> ${BUILDKITE_BUILD_NUMBER}'
-    branches: release/*
-    agents:
-      queue: 'wo:qa'
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 1
-    env:
-      BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
-      ENV: 'qa'
-      REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
+  # - command:
+  #     - chmod 755 auto/build.sh
+  #     - auto/build.sh
+  #     - chmod 755 auto/deploy_qa.sh
+  #     - auto/deploy_qa.sh
+  #   label: ':package: & :rocket: Build & Deploy QA: VERSION -> ${BUILDKITE_BUILD_NUMBER}'
+  #   branches: release/*
+  #   agents:
+  #     queue: 'wo:qa'
+  #   retry:
+  #     automatic:
+  #       - exit_status: -1
+  #         limit: 1
+  #   env:
+  #     BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
+  #     ENV: 'qa'
+  #     REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
 
-  - command:
-      - echo "Bypass master Github Commit Status from QA..."
-    label: ':package: & :rocket: Bypass master Github Commit Status from QA'
-    key: 'qa_run_tests'
-    branches: release/*
-    agents:
-      queue: 'wo:qa'
-    notify:
-      - github_commit_status:
-          context: 'Pre-Prod: Unit Tests?'
-      # - if: build.branch =~ /^release\//
-      #   github_commit_status:
-      #     context: 'Pre-Prod: Unit Tests for pswoa-*?'
-    retry:
-      automatic:
-        - exit_status: -1
-          limit: 1
-    env:
-      BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
-      ENV: 'qa-IntegrationTests'
-      REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
+  # - command:
+  #     - echo "Bypass master Github Commit Status from QA..."
+  #   label: ':package: & :rocket: Bypass master Github Commit Status from QA'
+  #   key: 'qa_run_tests'
+  #   branches: release/*
+  #   agents:
+  #     queue: 'wo:qa'
+  #   notify:
+  #     - github_commit_status:
+  #         context: 'Pre-Prod: Unit Tests?'
+  #     # - if: build.branch =~ /^release\//
+  #     #   github_commit_status:
+  #     #     context: 'Pre-Prod: Unit Tests for pswoa-*?'
+  #   retry:
+  #     automatic:
+  #       - exit_status: -1
+  #         limit: 1
+  #   env:
+  #     BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
+  #     ENV: 'qa-IntegrationTests'
+  #     REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
 
   - command:
       - chmod 755 auto/run_tests.sh
