--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "exceljs": "^4.3.0",
     "faker": "^5.5.3",
     "file-saver": "^2.0.5",
+    "firebase": "^9.17.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.2.8",
     "gantt-schedule-timeline-calendar": "^3.16.1",
