PSWOA-2270-Estimate main portal url

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -139,7 +139,7 @@ steps:
       BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
       ENV: 'preprod'
       REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
-      REACT_APP_ESTIMATES_URL: 'https://estimates.woaharvest.com'
+      REACT_APP_ESTIMATES_URL: 'https://estimates-preprod.woaharvest.com'
 
   - wait
 
@@ -164,3 +164,4 @@ steps:
       BUILD_VERSION: '${BUILDKITE_BUILD_NUMBER}'
       ENV: 'prod'
       REACT_APP_SUPERSET_URL: 'https://bi.woaharvest.com'
+      REACT_APP_ESTIMATES_URL: 'https://estimates.woaharvest.com'
