--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "source.fixAll.eslint": true
   },
   "eslint.validate": ["javascript", "typescript", "javascriptreact", "html", "typescriptreact"],
-  "eslint.options": { "configFile": "./.eslintrc.js" }
+  "eslint.options": {
+    "configFile": "./.eslintrc.js"
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
