--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -93,7 +93,7 @@ steps:
       - chmod 755 auto/run_tests.sh
       - auto/run_tests.sh
     label: ':package: & :rocket: Run Tests on PRE-PROD: VERSION -> ${BUILDKITE_BUILD_NUMBER}'
-    if: build.branch == "pswoa-*"
+    if: build.branch =~ "pswoa-*"
     # depends_on:
     #   - "build"
     # soft_fail:
