--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
