--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://preprod.woaharvest.com",
   "dependencies": {
+    "@asseinfo/react-kanban": "^2.2.0",
     "@chakra-ui/icons": "^1.0.17",
     "@chakra-ui/react": "^1.8.6",
     "@chakra-ui/theme": "^1.10.4",
@@ -11,6 +12,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
+    "@lourenci/react-kanban": "^2.1.0",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^5.11.4",
