--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "chakra-react-select": "^3.3.1",
     "country-flag-icons": "^1.4.14",
     "cross-env": "^7.0.3",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.30.0",
     "exceljs": "^4.3.0",
     "faker": "^5.5.3",
     "file-saver": "^2.0.5",
@@ -46,6 +46,7 @@
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
