--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
-    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
@@ -171,7 +170,8 @@
     "moment-locales-webpack-plugin": "1.2.0",
     "msw": "^0.39.1",
     "node-json-db": "^1.5.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "react-date-range": "^1.4.0"
   },
   "msw": {
     "workerDirectory": "public"
