--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gantt-schedule-timeline-calendar": "^3.16.1",
     "gantt-task-react": "^0.3.9",
     "history": "^5.2.0",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^21.6.13",
     "import": "^0.0.6",
     "jspdf": "^2.5.1",
