--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 PUBLIC_URL=/
 GENERATE_SOURCEMAP=false
+REACT_APP_GITHUB_TOKEN=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
+REACT_APP_BUILDKITE_TOKEN=bkua_381e83ae5ef0f1f90623f199aa89a1c79d902a3f
