--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -125,7 +125,7 @@ steps:
       REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
       REACT_APP_ESTIMATES_URL: 'https://estimates-preprod.woaharvest.com'
       REACT_APP_MAINTENANCE_URL: 'https://maintenance-preprod.woaharvest.com'
-      REACT_APP_CRM_URL: 'https://crm-preprod.woaharvest.com'
+      REACT_APP_CRM_URL: 'https://preprod-crm.woaharvest.com'
 
   - wait
 
@@ -153,7 +153,7 @@ steps:
       REACT_APP_SUPERSET_URL: 'https://bi-preprod.woaharvest.com'
       REACT_APP_ESTIMATES_URL: 'https://estimates-preprod.woaharvest.com'
       REACT_APP_MAINTENANCE_URL: 'https://maintenance-preprod.woaharvest.com'
-      REACT_APP_CRM_URL: 'https://crm-preprod.woaharvest.com'
+      REACT_APP_CRM_URL: 'https://preprod-crm.woaharvest.com'
 
   - wait
 
