--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,11 @@
 PUBLIC_URL=/
 GENERATE_SOURCEMAP=false
+REACT_APP_CRM_URL=http://localhost:3001
+REACT_APP_FIREBASE_API_KEY= 'AIzaSyDubiFzyOj0iar4chN2Z1Fg356LfYDGagQ'
+REACT_APP_FIREBASE_AUTH_DOMAIN='whiteoaks-9dc51.firebaseapp.com'
+REACT_APP_FIREBASE_PROJECT_ID='whiteoaks-9dc51'
+REACT_APP_FIREBASE_STORAGE_BUCKET='whiteoaks-9dc51.appspot.com'
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID='884836479897'
+REACT_APP_FIREBASE_APP_ID='1:884836479897:web:3425d1369f17258b1c9908'
+REACT_APP_FIREBASE_MEASUREMENT_ID='G-WNCM8PYDCZ'
+REACT_APP_FIREBASE_DATABASE_URL='https://whiteoaks-9dc51.firebaseio.com',
