--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@hookform/resolvers": "^2.8.8",
     "@octokit/rest": "18.12.0",
     "@react-icons/all-files": "^4.1.0",
+    "@stripe/react-stripe-js": "^2.6.0",
+    "@stripe/stripe-js": "^3.0.8",
     "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -25,6 +27,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.26.0",
     "babel-loader": "8.1.0",
+    "card-validator": "^9.1.0",
     "chakra-react-select": "^3.3.1",
     "country-flag-icons": "^1.4.14",
     "cross-env": "^7.0.3",
